--- a/src/mylangchain_app/01RAG/010_RAG_Pipeline_5Retriever.ipynb
+++ b/src/mylangchain_app/01RAG/010_RAG_Pipeline_5Retriever.ipynb
@@ -34,12 +34,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b76f68a8-4745-4377-8057-6090b87377d1",
    "metadata": {
     "id": "b76f68a8-4745-4377-8057-6090b87377d1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sk-\n"
+     ]
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "import os\n",
@@ -61,10 +69,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d6f0430b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\user\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\mylangchain-app-SBe-Yh6W-py3.12\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'langchain_core.vectorstores.base.VectorStoreRetriever'>\n",
+      "LangChain의 주요 기능 중 하나는 다양한 LLM 모델과의 연동입니다.\n",
+      "LangChain은 LLM 기반 애플리케이션을 쉽게 구축할 수 있도록 지원합니다.\n",
+      "LangChain은 해리슨 체이스(Harrison Chase)가 2022년 10월에 개발되었습니다.\n",
+      "LangChain Community 라이브러리는 서드파티 통합\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.vectorstores import FAISS\n",
     "from langchain_openai import OpenAIEmbeddings\n",
@@ -93,6 +121,7 @@
     "# 필요에 따라 k 값을 조정하여 검색 문서 개수를 변경할 수 있음\n",
     "# search_kwargs={\"k\": 4}\n",
     "retriever = vector_store.as_retriever()\n",
+    "print(type(retriever))\n",
     "\n",
     "# 검색 실행\n",
     "query = \"LangChain 이란?\"\n",
@@ -113,10 +142,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "efb70ea5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LangChain의 주요 기능 중 하나는 다양한 LLM 모델과의 연동입니다.\n",
+      "LangChain은 LLM 기반 애플리케이션을 쉽게 구축할 수 있도록 지원합니다.\n",
+      "LangChain은 해리슨 체이스(Harrison Chase)가 2022년 10월에 개발되었습니다.\n",
+      "LangChain Core 라이브러리는 기본 추상화 및 LangChain 표현 언어\n",
+      "LangChain Community 라이브러리는 서드파티 통합\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.vectorstores import FAISS\n",
     "from langchain_openai import OpenAIEmbeddings\n",
@@ -141,12 +182,12 @@
     "vector_store = FAISS.from_documents(documents, embedding_model)\n",
     "\n",
     "# LLM 모델 설정 (GPT 사용)\n",
-    "#llm = ChatOpenAI(model_name=\"gpt-3.5-turbo-0125\")\n",
-    "llm = ChatOpenAI(\n",
-    "    base_url=\"https://api.groq.com/openai/v1\",\n",
-    "    model=\"moonshotai/kimi-k2-instruct-0905\",\n",
-    "    temperature=0\n",
-    ")\n",
+    "llm = ChatOpenAI(model_name=\"gpt-4o-mini\")\n",
+    "# llm = ChatOpenAI(\n",
+    "#     base_url=\"https://api.groq.com/openai/v1\",\n",
+    "#     model=\"moonshotai/kimi-k2-instruct-0905\",\n",
+    "#     temperature=0\n",
+    "# )\n",
     "\n",
     "# Multi Query Retriever 생성\n",
     "retriever = MultiQueryRetriever.from_llm(retriever=vector_store.as_retriever(), llm=llm)\n",
@@ -173,7 +214,67 @@
    "execution_count": null,
    "id": "7cbe654f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: POST http://127.0.0.1:11434/api/embed \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " [1] 일반 VectorStore Retriever 검색 결과:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: POST http://127.0.0.1:11434/api/embed \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " - 벡터 저장소는 문서를 벡터화하여 빠른 검색을 가능하게 합니다.\n",
+      " - LangChain Core 라이브러리는 기본 추상화 및 LangChain 표현 언어\n",
+      " - LangChain Community 라이브러리는 서드파티 통합\n",
+      " - LangChain의 주요 기능 중 하나는 다양한 LLM 모델과의 연동입니다.\n",
+      "\n",
+      " [2] Multi Query Retriever가 생성한 다양한 검색 쿼리:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "INFO:langchain.retrievers.multi_query:Generated queries: ['벡터 저장소의 정의는 무엇인가요? ', '벡터 데이터베이스의 기능과 용도는 어떤 것들이 있나요? ', '어떻게 벡터 저장소가 데이터 검색을 개선할 수 있나요?']\n",
+      "INFO:httpx:HTTP Request: POST http://127.0.0.1:11434/api/embed \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST http://127.0.0.1:11434/api/embed \"HTTP/1.1 200 OK\"\n",
+      "INFO:httpx:HTTP Request: POST http://127.0.0.1:11434/api/embed \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " [3] Multi Query Retriever 검색 결과:\n",
+      " - 벡터 저장소는 문서를 벡터화하여 빠른 검색을 가능하게 합니다.\n",
+      " - LangChain Core 라이브러리는 기본 추상화 및 LangChain 표현 언어\n",
+      " - LangChain Community 라이브러리는 서드파티 통합\n",
+      " - LangChain의 주요 기능 중 하나는 다양한 LLM 모델과의 연동입니다.\n",
+      " - LangChain은 LLM 기반 애플리케이션을 쉽게 구축할 수 있도록 지원합니다.\n",
+      " - 멀티 쿼리 검색은 한 가지 질문을 여러 방식으로 변형하여 검색 효율을 높입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.vectorstores import FAISS\n",
     "from langchain_openai import ChatOpenAI, OpenAIEmbeddings\n",
@@ -202,12 +303,12 @@
     "vector_store = FAISS.from_documents(documents, embedding_model)\n",
     "\n",
     "# LLM 모델 설정 (GPT 사용)\n",
-    "#llm = ChatOpenAI(model_name=\"gpt-3.5-turbo-0125\")\n",
-    "llm = ChatOpenAI(\n",
-    "    base_url=\"https://api.groq.com/openai/v1\",\n",
-    "    model=\"moonshotai/kimi-k2-instruct-0905\",\n",
-    "    temperature=0\n",
-    ")\n",
+    "llm = ChatOpenAI(model_name=\"gpt-4o-mini\")\n",
+    "# llm = ChatOpenAI(\n",
+    "#     base_url=\"https://api.groq.com/openai/v1\",\n",
+    "#     model=\"moonshotai/kimi-k2-instruct-0905\",\n",
+    "#     temperature=0\n",
+    "# )\n",
     "\n",
     "# 일반 VectorStore Retriever (기본 검색)\n",
     "vector_retriever = vector_store.as_retriever()\n",
@@ -245,7 +346,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "chatbot-0lCeHk3W-py3.12",
+   "display_name": "mylangchain-app-SBe-Yh6W-py3.12",
    "language": "python",
    "name": "python3"
   },
