--- a/src/mylangchain_app/01RAG/010_RAG_Pipeline_5Retriever.ipynb
+++ b/src/mylangchain_app/01RAG/010_RAG_Pipeline_5Retriever.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d6f0430b",
    "metadata": {},
    "outputs": [
@@ -85,11 +85,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'langchain_core.vectorstores.base.VectorStoreRetriever'>\n",
       "LangChain의 주요 기능 중 하나는 다양한 LLM 모델과의 연동입니다.\n",
       "LangChain은 LLM 기반 애플리케이션을 쉽게 구축할 수 있도록 지원합니다.\n",
       "LangChain은 해리슨 체이스(Harrison Chase)가 2022년 10월에 개발되었습니다.\n",
-      "LangChain Community 라이브러리는 서드파티 통합\n"
+      "LangChain Community 라이브러리는 서드파티 통합\n",
+      "LangChain Core 라이브러리는 기본 추상화 및 LangChain 표현 언어\n"
      ]
     }
    ],
@@ -120,12 +120,17 @@
     "# search_kwargs의 기본값은 {\"k\": 3} 기본적으로 최대 3개의 문서를 검색\n",
     "# 필요에 따라 k 값을 조정하여 검색 문서 개수를 변경할 수 있음\n",
     "# search_kwargs={\"k\": 4}\n",
-    "retriever = vector_store.as_retriever()\n",
-    "print(type(retriever))\n",
+    "#retriever = vector_store.as_retriever()\n",
+    "#print(type(retriever))\n",
+    "\n",
+    "filtered_retriever = vector_store.as_retriever(\n",
+    "    search_type=\"similarity_score_threshold\",\n",
+    "    search_kwargs={\"score_threshold\": 0.3, \"k\": 5} # 임계값을 0.3으로 낮춤\n",
+    ")\n",
     "\n",
     "# 검색 실행\n",
     "query = \"LangChain 이란?\"\n",
-    "retrieved_docs = retriever.invoke(query)\n",
+    "retrieved_docs = filtered_retriever.invoke(query)\n",
     "\n",
     "# 검색된 문서 출력\n",
     "for doc in retrieved_docs:\n",
