--- a/src/mylangchain_app/01RAG/010_RAG_Pipeline_5Retriever.ipynb
+++ b/src/mylangchain_app/01RAG/010_RAG_Pipeline_5Retriever.ipynb
@@ -34,20 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b76f68a8-4745-4377-8057-6090b87377d1",
    "metadata": {
     "id": "b76f68a8-4745-4377-8057-6090b87377d1"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sk-\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "import os\n",
@@ -72,27 +64,7 @@
    "execution_count": null,
    "id": "d6f0430b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\user\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\mylangchain-app-SBe-Yh6W-py3.12\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LangChain의 주요 기능 중 하나는 다양한 LLM 모델과의 연동입니다.\n",
-      "LangChain은 LLM 기반 애플리케이션을 쉽게 구축할 수 있도록 지원합니다.\n",
-      "LangChain은 해리슨 체이스(Harrison Chase)가 2022년 10월에 개발되었습니다.\n",
-      "LangChain Community 라이브러리는 서드파티 통합\n",
-      "LangChain Core 라이브러리는 기본 추상화 및 LangChain 표현 언어\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain.vectorstores import FAISS\n",
     "from langchain_openai import OpenAIEmbeddings\n",
@@ -125,7 +97,7 @@
     "\n",
     "filtered_retriever = vector_store.as_retriever(\n",
     "    search_type=\"similarity_score_threshold\",\n",
-    "    search_kwargs={\"score_threshold\": 0.3, \"k\": 5} # 임계값을 0.3으로 낮춤\n",
+    "    search_kwargs={\"score_threshold\": 0.3, \"k\": 4} # 임계값을 0.3으로 낮춤\n",
     ")\n",
     "\n",
     "# 검색 실행\n",
@@ -147,22 +119,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "efb70ea5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LangChain의 주요 기능 중 하나는 다양한 LLM 모델과의 연동입니다.\n",
-      "LangChain은 LLM 기반 애플리케이션을 쉽게 구축할 수 있도록 지원합니다.\n",
-      "LangChain은 해리슨 체이스(Harrison Chase)가 2022년 10월에 개발되었습니다.\n",
-      "LangChain Core 라이브러리는 기본 추상화 및 LangChain 표현 언어\n",
-      "LangChain Community 라이브러리는 서드파티 통합\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain.vectorstores import FAISS\n",
     "from langchain_openai import OpenAIEmbeddings\n",
@@ -195,11 +155,13 @@
     "# )\n",
     "\n",
     "# Multi Query Retriever 생성\n",
-    "retriever = MultiQueryRetriever.from_llm(retriever=vector_store.as_retriever(), llm=llm)\n",
+    "retriever = MultiQueryRetriever.from_llm(retriever=filtered_retriever, llm=llm)\n",
     "\n",
     "# 검색 실행\n",
     "query = \"LangChain 이란?\"\n",
+    "#query = \"오늘의 날씨는?\"\n",
     "retrieved_docs = retriever.invoke(query)\n",
+    "print(len(retrieved_docs))\n",
     "\n",
     "# 검색된 문서 출력\n",
     "for doc in retrieved_docs:\n",
@@ -219,67 +181,7 @@
    "execution_count": null,
    "id": "7cbe654f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:httpx:HTTP Request: POST http://127.0.0.1:11434/api/embed \"HTTP/1.1 200 OK\"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " [1] 일반 VectorStore Retriever 검색 결과:\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:httpx:HTTP Request: POST http://127.0.0.1:11434/api/embed \"HTTP/1.1 200 OK\"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " - 벡터 저장소는 문서를 벡터화하여 빠른 검색을 가능하게 합니다.\n",
-      " - LangChain Core 라이브러리는 기본 추상화 및 LangChain 표현 언어\n",
-      " - LangChain Community 라이브러리는 서드파티 통합\n",
-      " - LangChain의 주요 기능 중 하나는 다양한 LLM 모델과의 연동입니다.\n",
-      "\n",
-      " [2] Multi Query Retriever가 생성한 다양한 검색 쿼리:\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "INFO:langchain.retrievers.multi_query:Generated queries: ['벡터 저장소의 정의는 무엇인가요? ', '벡터 데이터베이스의 기능과 용도는 어떤 것들이 있나요? ', '어떻게 벡터 저장소가 데이터 검색을 개선할 수 있나요?']\n",
-      "INFO:httpx:HTTP Request: POST http://127.0.0.1:11434/api/embed \"HTTP/1.1 200 OK\"\n",
-      "INFO:httpx:HTTP Request: POST http://127.0.0.1:11434/api/embed \"HTTP/1.1 200 OK\"\n",
-      "INFO:httpx:HTTP Request: POST http://127.0.0.1:11434/api/embed \"HTTP/1.1 200 OK\"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " [3] Multi Query Retriever 검색 결과:\n",
-      " - 벡터 저장소는 문서를 벡터화하여 빠른 검색을 가능하게 합니다.\n",
-      " - LangChain Core 라이브러리는 기본 추상화 및 LangChain 표현 언어\n",
-      " - LangChain Community 라이브러리는 서드파티 통합\n",
-      " - LangChain의 주요 기능 중 하나는 다양한 LLM 모델과의 연동입니다.\n",
-      " - LangChain은 LLM 기반 애플리케이션을 쉽게 구축할 수 있도록 지원합니다.\n",
-      " - 멀티 쿼리 검색은 한 가지 질문을 여러 방식으로 변형하여 검색 효율을 높입니다.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain.vectorstores import FAISS\n",
     "from langchain_openai import ChatOpenAI, OpenAIEmbeddings\n",
