--- a/src/mylangchain_app/01RAG/011_RAG_DocxLoader_Faiss_Upstage.ipynb
+++ b/src/mylangchain_app/01RAG/011_RAG_DocxLoader_Faiss_Upstage.ipynb
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,9 +281,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'query': '비과세소득에는 어떤것들이 있나요?',\n",
+      " 'result': '비과세소득에는 국군포로의 위로지원금, 국가지정문화재 서화·골동품 양도 소득, 박물관·미술관 양도 소득, 종교인소득 중 '\n",
+      "           '학자금·식사대·실비변상적 지급액·월 20만원 이내 보육 지원금·사택 이익, 위원회 수당 등이 포함됩니다. 또한 공익신탁 '\n",
+      "           '이익, 논·밭 작물 생산 소득, 1주택 임대소득(12억원 미만), 학자금, 실비변상적 급여 등도 비과세 대상입니다. '\n",
+      "           '구체적인 항목은 관련 법령 및 시행령에서 추가로 규정하고 있습니다.'}\n"
+     ]
+    }
+   ],
    "source": [
-    "query = '과세소득의 범위 및 소득의 구분에는 어떤것들이 있나요?'\n",
+    "query = '비과세소득에는 어떤것들이 있나요?'\n",
     "\n",
     "ai_message = qa_chain.invoke({\"query\": query})\n",
     "pprint(ai_message)"
@@ -291,11 +303,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'query': '과세소득의 범위 및 소득의 구분에는 어떤것들이 있나요?',\n",
+      " 'result': '과세소득의 범위는 거주자의 경우 모든 소득, 비거주자의 경우 국내원천소득에 한정되며(제3조), 소득 구분은 거주자에 '\n",
+      "           '대해 종합소득(이자·배당·사업·근로·연금·기타소득), 퇴직소득, 금융투자소득, 양도소득으로 분류됩니다(제4조). '\n",
+      "           '신탁소득의 경우 수익자 또는 위탁자에게 귀속됩니다(제2조의3).'}\n"
+     ]
+    }
+   ],
    "source": [
-    "query = '비과세소득에 어떤 것들이 있나요?'\n",
+    "query = '과세소득의 범위 및 소득의 구분에는 어떤것들이 있나요?'\n",
     "\n",
     "ai_message = qa_chain.invoke({\"query\": query})\n",
     "pprint(ai_message)"
@@ -310,9 +333,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "문서 로드 완료\n",
+      "문서 분할 완료: 720개 청크 생성\n",
+      "벡터 저장소 생성 완료\n",
+      "{'query': '총수입금액 불산입에 대하여 설명해 주세요.', 'result': '총수입금액 불산입은 소득세 계산 시 특정 항목을 총수입금액에 포함하지 않는 것을 의미합니다. 이는 개별소비세, 주세, 국세/지방세 환급가산금 이자, 부가가치세 매출세액 등이 해당되며, 일부 무상 자산 가액이나 이월소득금액도 제외됩니다. 단, 원재료 매입 시 부담하는 세액 등은 예외적으로 산입됩니다.'}\n",
+      "\n",
+      " AI의 답변:\n",
+      "총수입금액 불산입은 소득세 계산 시 특정 항목을 총수입금액에 포함하지 않는 것을 의미합니다. 이는 개별소비세, 주세, 국세/지방세 환급가산금 이자, 부가가치세 매출세액 등이 해당되며, 일부 무상 자산 가액이나 이월소득금액도 제외됩니다. 단, 원재료 매입 시 부담하는 세액 등은 예외적으로 산입됩니다.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
@@ -364,6 +401,7 @@
     "def create_vector_store(text_chunks, embedding_model):\n",
     "    \"\"\"텍스트 청크를 임베딩하고 FAISS 벡터 저장소에 저장.\"\"\"\n",
     "    try:\n",
+    "        #List[Document]\n",
     "        documents = [Document(page_content=chunk) for chunk in text_chunks]\n",
     "        vector_store = FAISS.from_documents(documents, embedding_model)\n",
     "        vector_store.save_local(\"faiss_docdb\")\n",
@@ -430,6 +468,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('총수입금액 불산입은 소득세 계산 시 특정 항목을 총수입금액에 포함하지 않는 것을 의미합니다. 이는 개별소비세, 주세, 국세/지방세 '\n",
+      " '환급가산금 이자, 부가가치세 매출세액 등이 해당되며, 일부 무상 자산 가액이나 이월소득금액도 제외됩니다. 단, 원재료 매입 시 부담하는 '\n",
+      " '세액 등은 예외적으로 산입됩니다.')\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pprint import pprint\n",
+    "\n",
+    "pprint(results)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -447,9 +506,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== 개선된 RAG 파이프라인 실행 ===\n",
+      "\n",
+      "1. 문서 로드 중...\n",
+      "   문서 로드 완료: 289,214 문자\n",
+      "\n",
+      "2. 문서 분할 중...\n",
+      "   문서 분할 완료: 511개 청크 생성\n",
+      "\n",
+      "3. 임베딩 모델 초기화...\n",
+      "   임베딩 모델 초기화 완료\n",
+      "\n",
+      "4. 벡터 저장소 생성 중...\n",
+      "    벡터 저장소 생성 완료\n",
+      "\n",
+      "5. 질의 실행 중...\n",
+      "질의: 총수입금액 불산입에 대하여 설명해 주세요.\n",
+      "하이브리드 검색 수행 중...\n",
+      "검색된 관련 문서: 7개\n",
+      "LLM 응답 생성 중...\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
@@ -750,30 +835,49 @@
     "    print(\"5. 질의 실행 중...\")\n",
     "    query = \"총수입금액 불산입에 대하여 설명해 주세요.\"\n",
     "    results = query_with_llm(query, vector_store, documents)\n",
-    "    \n",
-    "    # 6. 컨텍스트 품질 평가\n",
-    "    context_quality = evaluate_context_quality(query, results[\"source_documents\"])\n",
-    "    \n",
-    "    # 7. 결과 출력\n",
-    "    print(\"\\n\" + \"=\"*60)\n",
-    "    print(\" AI의 답변:\")\n",
-    "    print(\"=\"*60)\n",
-    "    print(results[\"answer\"])\n",
-    "    \n",
-    "    print(\"\\n\" + \"=\"*60)\n",
-    "    print(\" 검색 결과 요약:\")\n",
-    "    print(\"=\"*60)\n",
-    "    print(f\"• 참고한 문서 조각 수: {len(results['source_documents'])}개\")\n",
-    "    print(f\"• 컨텍스트 품질 점수: {context_quality:.2f}/1.00\")\n",
-    "    print(f\"• 총 컨텍스트 길이: {len(results['context_used']):,} 문자\")\n",
-    "    \n",
-    "    print(\"\\n\" + \"=\"*60)\n",
-    "    print(\"📄 참고한 문서 미리보기:\")\n",
-    "    print(\"=\"*60)\n",
-    "    for i, doc in enumerate(results[\"source_documents\"][:3]):  # 상위 3개만 미리보기\n",
-    "        preview = doc.page_content[:200] + \"...\" if len(doc.page_content) > 200 else doc.page_content\n",
-    "        print(f\"\\n[문서 {i+1}] {preview}\")\n",
-    "    print(\"=\"*60)"
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pprint import pprint\n",
+    "\n",
+    "pprint(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 6. 컨텍스트 품질 평가\n",
+    "context_quality = evaluate_context_quality(query, results[\"source_documents\"])\n",
+    "\n",
+    "# 7. 결과 출력\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\" AI의 답변:\")\n",
+    "print(\"=\"*60)\n",
+    "print(results[\"answer\"])\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\" 검색 결과 요약:\")\n",
+    "print(\"=\"*60)\n",
+    "print(f\"• 참고한 문서 조각 수: {len(results['source_documents'])}개\")\n",
+    "print(f\"• 컨텍스트 품질 점수: {context_quality:.2f}/1.00\")\n",
+    "print(f\"• 총 컨텍스트 길이: {len(results['context_used']):,} 문자\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"📄 참고한 문서 미리보기:\")\n",
+    "print(\"=\"*60)\n",
+    "for i, doc in enumerate(results[\"source_documents\"][:3]):  # 상위 3개만 미리보기\n",
+    "    preview = doc.page_content[:200] + \"...\" if len(doc.page_content) > 200 else doc.page_content\n",
+    "    print(f\"\\n[문서 {i+1}] {preview}\")\n",
+    "print(\"=\"*60)"
    ]
   },
   {
