--- a/src/mylangchain_app/01RAG/011_RAG_WebBaseLoader_Upstage.ipynb
+++ b/src/mylangchain_app/01RAG/011_RAG_WebBaseLoader_Upstage.ipynb
@@ -187,7 +187,7 @@
     "# 분할된 문서 확인\n",
     "print(type(splits), len(splits))  # 총 몇 개의 청크가 생성되었는지 확인\n",
     "print(type(splits[0]))\n",
-    "print(splits[0].page_content[:20])  # 첫 번째 청크의 일부 출력"
+    "print(splits[0].page_content[:80])  # 첫 번째 청크의 일부 출력"
    ]
   },
   {
@@ -295,7 +295,8 @@
     "retriever = vectorstore.as_retriever(search_kwargs={\"k\": 3})  \n",
     "\n",
     "def format_docs(docs):\n",
-    "    summaries = [f\"출처: {doc.metadata.get('source', '알 수 없음')}\\n\" + doc.page_content[:300] + \"...\" for doc in docs]\n",
+    "    summaries = [f\"출처: {doc.metadata.get('source', '알 수 없음')}\\n\" \\\n",
+    "                 + doc.page_content[:300] + \"...\" for doc in docs]\n",
     "    return \"\\n\\n\".join(summaries)    \n",
     "\n",
     "# 프롬프트 템플릿 설정\n",
@@ -345,6 +346,22 @@
     "# 실행 (사용자 질문을 입력으로 받아 RAG 체인 실행)\n",
     "# - \"경기장 표시에 대해서 설명해주세요.\"라는 질문을 LLM에 전달하여 답변을 생성\n",
     "response = rag_chain.invoke(\"경기장 표시에 대해서 설명해주세요.\")  \n",
+    "\n",
+    "# 최종 응답 출력\n",
+    "print(f\" 모델 응답:\\n\")\n",
+    "pprint(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b559119",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"선수의 장비에 대하여 설명해 주세요.\"\n",
+    "\n",
+    "response = rag_chain.invoke(query)  \n",
     "\n",
     "# 최종 응답 출력\n",
     "print(f\" 모델 응답:\\n\")\n",
@@ -487,7 +504,32 @@
     "    | StrOutputParser()\n",
     ")\n",
     "\n",
-    "print(\" RAG 파이프라인 설정 완료!\\n\")\n",
+    "print(\" RAG 파이프라인 설정 완료!\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e69274b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"선수의 장비에 대하여 설명해 주세요.\"\n",
+    "\n",
+    "response = rag_chain.invoke(query)  \n",
+    "\n",
+    "# 최종 응답 출력\n",
+    "print(f\" 모델 응답:\\n\")\n",
+    "pprint(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8cc0a04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Step 8: 테스트 실행\n",
     "def ask_question(question):\n",
@@ -528,7 +570,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "chatbot-0lCeHk3W-py3.12",
+   "display_name": "mylangchain-app-SBe-Yh6W-py3.12",
    "language": "python",
    "name": "python3"
   },
