--- a/src/mylangchain_app/03ChatBot/00chatbot_gradioBasic.ipynb
+++ b/src/mylangchain_app/03ChatBot/00chatbot_gradioBasic.ipynb
@@ -18,9 +18,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\user\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\mylangchain-app-SBe-Yh6W-py3.12\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.46.0\n"
+     ]
+    }
+   ],
    "source": [
     "import gradio as gr\n",
     "print(gr.__version__)"
@@ -35,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +64,8 @@
     "        inputs=['text'],\n",
     "        outputs=\"text\",\n",
     "    )\n",
-    "    demo.launch()    "
+    "    demo.launch()   \n",
+    "    demo.close() "
    ]
   },
   {
@@ -67,23 +84,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import gradio as gr\n",
+    "\n",
     "def process_inputs(text, image, audio, number, option):\n",
     "   # Process inputs and return results\n",
     "   return f\"Processed: {text}, {number}, {option}\"\n",
     "\n",
     "def main2():\n",
-    "    demo = gr.Interface(\n",
-    "    fn=process_inputs,\n",
-    "    inputs=[\n",
-    "        gr.Textbox(label=\"Enter Text\"),\n",
-    "        gr.Image(label=\"Upload Image\"),\n",
-    "        gr.Audio(label=\"Upload Audio\"),  # Uncomment this line to add audio input\n",
-    "        gr.Slider(0, 100, label=\"Choose a number\"),\n",
-    "        gr.Dropdown([\"Streamlit\", \"Taipy\", \"Gradio\"], label=\"Select a UI library\"),\n",
-    "    ],\n",
-    "    outputs=\"text\",\n",
-    "    )\n",
-    "    demo.launch()"
+    "    with gr.Blocks() as demo:\n",
+    "        gr.Interface(\n",
+    "            fn=process_inputs,\n",
+    "            inputs=[\n",
+    "                gr.Textbox(label=\"Enter Text\"),\n",
+    "                gr.Image(label=\"Upload Image\"),\n",
+    "                gr.Audio(label=\"Upload Audio\"),  # Uncomment this line to add audio input\n",
+    "                gr.Slider(0, 100, label=\"Choose a number\"),\n",
+    "                gr.Dropdown([\"Streamlit\", \"Taipy\", \"Gradio\"], label=\"Select a UI library\"),\n",
+    "            ],\n",
+    "            outputs=\"text\",\n",
+    "        )\n",
+    "    \n",
+    "        demo.launch()"
    ]
   },
   {
@@ -174,18 +195,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7860\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Closing server running on port: 7860\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == '__main__':\n",
-    "    main()"
+    "    main2()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "mylangchain-app-SBe-Yh6W-py3.12",
    "language": "python",
    "name": "python3"
   },
@@ -199,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
