--- a/src/mylangchain_app/03ChatBot/00chatbot_gradioBasic.ipynb
+++ b/src/mylangchain_app/03ChatBot/00chatbot_gradioBasic.ipynb
@@ -51,21 +51,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import gradio as gr\n",
+    "\n",
     "def greet(name):\n",
     "   return f\"Hello, {name}!\"\n",
     "\n",
     "def main1():\n",
-    "    demo = gr.Interface(\n",
-    "        fn=greet,\n",
-    "        inputs=['text'],\n",
-    "        outputs=\"text\",\n",
-    "    )\n",
-    "    demo.launch()   \n",
-    "    demo.close() "
+    "    with gr.Blocks() as demo:\n",
+    "        gr.Interface(\n",
+    "            fn=greet,\n",
+    "            inputs=['text'],\n",
+    "            outputs=\"text\",\n",
+    "        )\n",
+    "        demo.launch()   \n",
+    "     "
    ]
   },
   {
