--- a/src/mylangchain_app/03ChatBot/00chatbot_gradioBasic.ipynb
+++ b/src/mylangchain_app/03ChatBot/00chatbot_gradioBasic.ipynb
@@ -51,9 +51,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\user\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\mylangchain-app-SBe-Yh6W-py3.12\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import gradio as gr\n",
     "\n",
@@ -83,18 +92,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\user\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\mylangchain-app-SBe-Yh6W-py3.12\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import gradio as gr\n",
     "\n",
@@ -148,7 +148,7 @@
     "                text4 = gr.Textbox(label=\"prompt 1\")\n",
     "                text5 = gr.Textbox(label=\"prompt 2\")\n",
     "            with gr.Column(scale=2, min_width=300):\n",
-    "                img1 = gr.Image(value=\"https://gradio-rows-and-columns.hf.space/gradio_api/file=/tmp/gradio/ebc973f2524706aef925e5ab256573154e0120573be1f0bae8b94b255fdddeec/cheetah.jpg\")\n",
+    "                img1 = gr.Image(value=\"https://www.google.com.au/images/nav_logo7.png\")\n",
     "                btn = gr.Button(\"Go\")\n",
     "\n",
     "    demo.launch()"
@@ -207,21 +207,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7860\n",
+      "* Running on local URL:  http://127.0.0.1:7861\n",
       "* To create a public link, set `share=True` in `launch()`.\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -229,11 +229,18 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created dataset file at: .gradio\\flagged\\dataset1.csv\n"
+     ]
     }
    ],
    "source": [
     "if __name__ == '__main__':\n",
-    "    main2()"
+    "    main3()"
    ]
   }
  ],
