--- a/src/mylangchain_app/03ChatBot/00chatbot_gradioBasic.ipynb
+++ b/src/mylangchain_app/03ChatBot/00chatbot_gradioBasic.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
     "                img1 = gr.Image(value=\"https://www.google.com.au/images/nav_logo7.png\")\n",
     "                btn = gr.Button(\"Go\")\n",
     "\n",
-    "    demo.launch()"
+    "        demo.launch()"
    ]
   },
   {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,26 +202,26 @@
     "        text_button.click(flip_text, inputs=text_input, outputs=text_output)\n",
     "        image_button.click(flip_image, inputs=image_input, outputs=image_output)\n",
     "\n",
-    "    demo.launch()"
+    "        demo.launch()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7861\n",
+      "* Running on local URL:  http://127.0.0.1:7863\n",
       "* To create a public link, set `share=True` in `launch()`.\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7863/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -229,18 +229,11 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created dataset file at: .gradio\\flagged\\dataset1.csv\n"
-     ]
     }
    ],
    "source": [
     "if __name__ == '__main__':\n",
-    "    main3()"
+    "    main()"
    ]
   }
  ],
