--- a/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
+++ b/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
@@ -6,7 +6,7 @@
     "id": "u-KIIvQ5NKJP"
    },
    "source": [
-    "PDF 파일기반 질의응답 챗봇 (랭체인, 그라디오, ChatGPT)"
+    "PDF 파일기반 질의응답 챗봇 (랭체인, 그라디오, Upstage)"
    ]
   },
   {
@@ -37,7 +37,10 @@
     "load_dotenv()\n",
     "\n",
     "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
-    "print(OPENAI_API_KEY[:4])"
+    "print(OPENAI_API_KEY[:4])\n",
+    "\n",
+    "UPSTAGE_API_KEY = os.getenv(\"UPSTAGE_API_KEY\")\n",
+    "print(UPSTAGE_API_KEY[30:])"
    ]
   },
   {
@@ -76,7 +79,7 @@
    "outputs": [],
    "source": [
     "# PDF 로드\n",
-    "loader = PyPDFLoader(\"../data/how-to-use-AI-in-6industries.pdf\")\n",
+    "loader = PyPDFLoader(\"../data/tutorial-korean.pdf\")\n",
     "documents = loader.load()"
    ]
   },
