--- a/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
+++ b/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
@@ -24,11 +24,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "C5uYZQknXLDM"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gsk_\n",
+      "WA\n"
+     ]
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "import os\n",
@@ -58,11 +67,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "5kZxXmSjQRHy"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\user\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\mylangchain-app-SBe-Yh6W-py3.12\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.document_loaders import PyPDFLoader\n",
     "from langchain_openai import OpenAIEmbeddings\n",
@@ -72,28 +90,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "7VgBZ49vQVzg"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "39\n"
+     ]
+    }
+   ],
    "source": [
     "# PDF 로드\n",
     "loader = PyPDFLoader(\"../data/tutorial-korean.pdf\")\n",
-    "documents = loader.load()"
+    "documents = loader.load()\n",
+    "print(len(documents))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "7VgBZ49vQVzg"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "39\n"
+     ]
+    }
+   ],
    "source": [
     "# 텍스트 분할\n",
-    "text_splitter = CharacterTextSplitter(chunk_size=1000, chunk_overlap=0)\n",
-    "texts = text_splitter.split_documents(documents)"
+    "text_splitter = CharacterTextSplitter(chunk_size=1000, chunk_overlap=200)\n",
+    "texts = text_splitter.split_documents(documents)\n",
+    "print(len(texts))"
    ]
   },
   {
@@ -104,8 +140,11 @@
    },
    "outputs": [],
    "source": [
+    "from langchain_upstage import UpstageEmbeddings\n",
+    "\n",
     "# OpenAI Embeddings 적용\n",
-    "embeddings = OpenAIEmbeddings()\n",
+    "#embeddings = OpenAIEmbeddings()\n",
+    "embeddings = UpstageEmbeddings(model=\"solar-embedding-1-large\")\n",
     "\n",
     "# FAISS 벡터 저장소 생성\n",
     "vector_store = FAISS.from_documents(texts, embeddings)\n",
@@ -470,7 +509,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "chatbot-0lCeHk3W-py3.12",
+   "display_name": "mylangchain-app-SBe-Yh6W-py3.12",
    "language": "python",
    "name": "python3"
   },
