--- a/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
+++ b/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
@@ -148,6 +148,7 @@
     "\n",
     "# FAISS 벡터 저장소 생성\n",
     "vector_store = FAISS.from_documents(texts, embeddings)\n",
+    "vector_store.save_local(\"../db/faiss_db\")\n",
     "# 벡터 저장소에서 검색하기\n",
     "# search_type=\"similarity\" 옵션은 retrieval 객체에서 유사성 검색을 사용하여 질문 vector와 가장 유사한 문장 vector를 선택함\n",
     "# search_kwargs 옵션은 vector 저장소에서 Prompt 2개의 텍스트 덩어리로 보내려는 것을 의미함\n",
