--- a/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
+++ b/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "id": "7VgBZ49vQVzg"
    },
@@ -119,7 +119,8 @@
    ],
    "source": [
     "# 텍스트 분할\n",
-    "text_splitter = CharacterTextSplitter(chunk_size=500, chunk_overlap=50)\n",
+    "#text_splitter = CharacterTextSplitter(chunk_size=500, chunk_overlap=50)\n",
+    "text_splitter = RecursiveCharacterTextSplitter(chunk_size=200, chunk_overlap=0)\n",
     "texts = text_splitter.split_documents(documents)\n",
     "print(len(texts))"
    ]
