--- a/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
+++ b/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "7VgBZ49vQVzg"
    },
@@ -113,7 +113,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "39\n"
+      "283\n"
      ]
     }
    ],
@@ -121,7 +121,8 @@
     "# 텍스트 분할\n",
     "#text_splitter = CharacterTextSplitter(chunk_size=500, chunk_overlap=50)\n",
     "text_splitter = RecursiveCharacterTextSplitter(chunk_size=200, chunk_overlap=0)\n",
-    "texts = text_splitter.split_documents(documents)\n",
+    "#texts = text_splitter.split_documents(documents)\n",
+    "texts = loader.load_and_split(text_splitter=text_splitter)\n",
     "print(len(texts))"
    ]
   },
