--- a/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
+++ b/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "id": "4otdIuNkT5b_"
    },
@@ -163,11 +163,17 @@
    "outputs": [],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
+    "from langchain_upstage import ChatUpstage\n",
     "from langchain.chains import RetrievalQA\n",
     "\n",
     "# ChatOpenAI는 기본모델인  gpt-3.5-turbo 사용하고\n",
     "# temperature=0은 보수적인 지문에 대한 답변을 내고, temperature=1 다양한 답변을 낼 수 있음 \n",
-    "llm = ChatOpenAI(model=\"gpt-3.5-turbo\", temperature=0)\n",
+    "#llm = ChatOpenAI(model=\"gpt-3.5-turbo\", temperature=0)\n",
+    "llm = ChatUpstage(\n",
+    "        model=\"solar-pro\",\n",
+    "        base_url=\"https://api.upstage.ai/v1\",\n",
+    "        temperature=0.5\n",
+    ")\n",
     "\n",
     "# RetrievalQA가 실질적인 RAG를 수행하는 객체\n",
     "chain = RetrievalQA.from_chain_type(\n",
