--- a/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
+++ b/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
@@ -173,7 +173,49 @@
     "        model=\"solar-pro\",\n",
     "        base_url=\"https://api.upstage.ai/v1\",\n",
     "        temperature=0.5\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.prompts import PromptTemplate\n",
+    "\n",
+    "# 한국어 최적화 프롬프트\n",
+    "prompt_template = \"\"\"\n",
+    "당신은 BlueJ 프로그래밍 환경 전문가입니다. \n",
+    "아래 문서 내용을 바탕으로 정확하고 친절한 답변을 제공해주세요.\n",
+    "\n",
+    "문서 내용:\n",
+    "{context}\n",
+    "\n",
+    "질문: {question}\n",
+    "\n",
+    "답변 규칙:\n",
+    "1. 문서 내용만을 근거로 답변하세요\n",
+    "2. 단계별 설명이 필요하면 순서대로 작성하세요  \n",
+    "3. 구체적인 메뉴명, 버튼명을 포함하세요\n",
+    "4. 문서에 없는 정보는 \"문서에서 찾을 수 없습니다\"라고 하세요\n",
+    "\n",
+    "답변:\"\"\"\n",
+    "\n",
+    "prompt = PromptTemplate(\n",
+    "    template=prompt_template,\n",
+    "    input_variables=[\"context\", \"question\"]\n",
     ")\n",
+    "print(\" 프롬프트 설정 완료\")\n",
+    "print(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# RetrievalQA가 실질적인 RAG를 수행하는 객체\n",
     "chain = RetrievalQA.from_chain_type(\n",
