--- a/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
+++ b/src/mylangchain_app/03ChatBot/03chatbot_gradio_rag.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,9 +178,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 프롬프트 설정 완료\n",
+      "input_variables=['context', 'question'] input_types={} partial_variables={} template='\\n당신은 BlueJ 프로그래밍 환경 전문가입니다. \\n아래 문서 내용을 바탕으로 정확하고 친절한 답변을 제공해주세요.\\n\\n문서 내용:\\n{context}\\n\\n질문: {question}\\n\\n답변 규칙:\\n1. 문서 내용만을 근거로 답변하세요\\n2. 단계별 설명이 필요하면 순서대로 작성하세요  \\n3. 구체적인 메뉴명, 버튼명을 포함하세요\\n4. 문서에 없는 정보는 \"문서에서 찾을 수 없습니다\"라고 하세요\\n\\n답변:'\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.prompts import PromptTemplate\n",
     "\n",
@@ -212,9 +221,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RetrievalQA(verbose=False, combine_documents_chain=StuffDocumentsChain(verbose=False, llm_chain=LLMChain(verbose=False, prompt=PromptTemplate(input_variables=['context', 'question'], input_types={}, partial_variables={}, template='\\n당신은 BlueJ 프로그래밍 환경 전문가입니다. \\n아래 문서 내용을 바탕으로 정확하고 친절한 답변을 제공해주세요.\\n\\n문서 내용:\\n{context}\\n\\n질문: {question}\\n\\n답변 규칙:\\n1. 문서 내용만을 근거로 답변하세요\\n2. 단계별 설명이 필요하면 순서대로 작성하세요  \\n3. 구체적인 메뉴명, 버튼명을 포함하세요\\n4. 문서에 없는 정보는 \"문서에서 찾을 수 없습니다\"라고 하세요\\n\\n답변:'), llm=ChatUpstage(client=<openai.resources.chat.completions.completions.Completions object at 0x000001A2708EA750>, async_client=<openai.resources.chat.completions.completions.AsyncCompletions object at 0x000001A2708EADB0>, model_name='solar-pro', temperature=0.5, model_kwargs={}, upstage_api_key=SecretStr('**********'), upstage_api_base='https://api.upstage.ai/v1'), output_parser=StrOutputParser(), llm_kwargs={}), document_prompt=PromptTemplate(input_variables=['page_content'], input_types={}, partial_variables={}, template='{page_content}'), document_variable_name='context'), return_source_documents=True, retriever=VectorStoreRetriever(tags=['FAISS', 'UpstageEmbeddings'], vectorstore=<langchain_community.vectorstores.faiss.FAISS object at 0x000001A21E242600>, search_kwargs={'k': 6}))"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "# RetrievalQA가 실질적인 RAG를 수행하는 객체\n",
@@ -222,8 +242,10 @@
     "    llm=llm,\n",
     "    chain_type=\"stuff\",\n",
     "    retriever=retriever,  # 기존 retriever 유지\n",
+    "    chain_type_kwargs={\"prompt\": prompt},\n",
     "    return_source_documents=True\n",
-    ")"
+    ")\n",
+    "chain"
    ]
   },
   {
@@ -234,7 +256,7 @@
    },
    "outputs": [],
    "source": [
-    "query = \"언더라이팅\"\n",
+    "query = \"코드패드는 무엇이고 어떻게 사용하나요?\"\n",
     "query_result = chain.invoke(query)\n",
     "print(type(query_result))\n",
     "print(query_result)"
